--- a/libs/leptonica/Makefile
+++ b/libs/leptonica/Makefile
@@ -8,12 +8,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=leptonica
-PKG_VERSION:=1.68
+PKG_VERSION:=1.71
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=http://leptonica.googlecode.com/files/
-PKG_MD5SUM:=5cd7092f9ff2ca7e3f3e73bfcd556403
+PKG_SOURCE_URL:=http://www.leptonica.com/source/
+PKG_MD5SUM:=790f34d682e6150c12c54bfe4a824f7f
 
 PKG_FIXUP:=autoreconf
 PKG_INSTALL:=1
@@ -24,7 +24,7 @@ define Package/libleptonica
   SECTION:=libs
   CATEGORY:=Libraries
   TITLE:=A library for efficient image processing and image analysis operations
-  URL:=http://leptonica.googlecode.com/
+  URL:=http://www.leptonica.com/
   DEPENDS:=+giflib +libjpeg +libpng +libtiff +zlib
 endef
 
