--- a/utils/loop-aes/Makefile
+++ b/utils/loop-aes/Makefile
@@ -9,12 +9,12 @@ include $(TOPDIR)/rules.mk
 include $(INCLUDE_DIR)/kernel.mk
 
 PKG_NAME:=loop-aes
-PKG_VERSION:=3.7a
+PKG_VERSION:=3.7g
 PKG_RELEASE:=1
 
 PKG_SOURCE:=loop-AES-v$(PKG_VERSION).tar.bz2
 PKG_SOURCE_URL:=@SF/$(PKG_NAME)
-PKG_MD5SUM:=f267cb2108ee94b09a30b2fc7e292104
+PKG_MD5SUM:=6fb2217b15586295ce949e93538a701d
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/loop-AES-v$(PKG_VERSION)
 PKG_BUILD_PARALLEL:=1
