ustl: update package
upstream uses github now

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/libs/ustl/Makefile
+++ b/libs/ustl/Makefile
@@ -8,12 +8,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=ustl
-PKG_VERSION:=0.8
+PKG_VERSION:=2.2
 PKG_RELEASE:=1
 
-PKG_SOURCE:=$(PKG_NAME)-0.8-0.tar.bz2
-PKG_SOURCE_URL:=@SF/ustl
-PKG_MD5SUM:=dd59483c327f1bd1356273bc5ae4dde0
+PKG_SOURCE:=v2.2.tar.gz
+PKG_SOURCE_URL:=https://github.com/msharov/ustl/archive/
+PKG_MD5SUM:=9123e904f55442cf79089e180bd93577
+PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
 
@@ -21,43 +22,42 @@ define Package/ustl
   SECTION:=libs
   CATEGORY:=Libraries
   TITLE:=C++ STL for embedded systems
-  DEPENDS:=@!TARGET_avr32
+  DEPENDS:=@BROKEN
   URL:=http://ustl.sourceforge.net/
 endef
 
 define Package/ustl/description
 	C++ Standard Template Library (STL) for embedded systems.\\\
-    uSTL is a partial implementation of the STL (Standard Template \\\
-    Library) that reduces code size by factoring memory management \\\
-    code into a non-template base class and deriving containers \\\
-    from it.
+	uSTL is a partial implementation of the STL (Standard Template \\\
+	Library) that reduces code size by factoring memory management \\\
+	code into a non-template base class and deriving containers \\\
+	from it.
+	http://msharov.github.io/ustl/
 endef
 
 define Build/Configure
+	$(CP) ./files/Config.mk $(PKG_BUILD_DIR)/
 	$(CP) ./files/config.h $(PKG_BUILD_DIR)/
-	$(CP) ./files/Common.mk $(PKG_BUILD_DIR)/
 endef
-
-TARGET_CFLAGS += $(FPIC)
 
 define Build/Compile
 	$(MAKE) -C $(PKG_BUILD_DIR) \
 		CROSS="$(TARGET_CROSS)" \
 		OPTFLAGS="$(TARGET_CFLAGS)" \
 		DESTDIR="$(PKG_INSTALL_DIR)" \
-		all install
+		all
 endef
 
 define Package/ustl/install
 	$(INSTALL_DIR) $(1)/usr/lib
-	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libustl.so.* $(1)/usr/lib/
+	$(CP) $(PKG_BUILD_DIR)/.o/libustl.so.* $(1)/usr/lib/
 endef
 
 define Build/InstallDev
-	$(INSTALL_DIR) $(1)/usr/include
-	$(CP) $(PKG_INSTALL_DIR)/usr/include/ustl* $(1)/usr/include/
+	$(INSTALL_DIR) $(1)/usr/include/ustl
+	$(CP) $(PKG_BUILD_DIR)/*.h $(1)/usr/include/ustl/
 	$(INSTALL_DIR) $(1)/usr/lib
-	$(CP) $(PKG_INSTALL_DIR)/usr/lib/libustl.{a,so*} $(1)/usr/lib/
+	$(CP) $(PKG_BUILD_DIR)/.o/libustl.{a,so*} $(1)/usr/lib/
 endef
 
 $(eval $(call BuildPackage,ustl))
