mini_snmpd: remove werror
new compiler with werror leads to build failure

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/mini_snmpd/Makefile
+++ b/net/mini_snmpd/Makefile
@@ -34,7 +34,7 @@ else
   TARGET_CFLAGS+= -D__IPV4__
 endif
 
-TARGET_CFLAGS+= -DSYSLOG
+TARGET_CFLAGS+= -DSYSLOG -Wno-error=pointer-to-int-cast
 
 MAKE_FLAGS+= \
 	OFLAGS="$(TARGET_CFLAGS)" \
