--- a/utils/lirc/Makefile
+++ b/utils/lirc/Makefile
@@ -30,7 +30,7 @@ define Package/lirc
     $(call Package/lirc/Default)
     TITLE:=LIRC - Linux Infrared Remote Control
     MENU:=1
-    DEPENDS:=+libpthread
+    DEPENDS:=+libpthread +libftdi +libusb-compat
 endef
 
 define Package/lirc/description
