gupnp-vala: mark as BROKEN
reason: uses gst 0.10 API

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/libs/gupnp-vala/Makefile
+++ b/libs/gupnp-vala/Makefile
@@ -27,6 +27,7 @@ define Package/libgupnp-vala
   CATEGORY:=Languages
   TITLE:=GUPnP Vala bindings
   URL:=http://live.gnome.org/GUPnP
+  DEPENDS:=@BROKEN
 endef
 
 define Package/libgupnp-vala/description
