php5-pecl-apc: mark as BROKEN
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/lang/php5-pecl-apc/Makefile
+++ b/lang/php5-pecl-apc/Makefile
@@ -18,6 +18,8 @@ PKG_NAME:=php5-pecl-apc
 PKG_SOURCE:=$(PECL_NAME)-$(PKG_VERSION).tgz
 PKG_SOURCE_URL:=http://pecl.php.net/get/
 
+PKG_REMOVE_FILES:=aclocal.m4
+PKG_FIXUP:=autoreconf libtool
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PECL_NAME)-$(PKG_VERSION)
 PKG_BUILD_PARALLEL:=1
 
@@ -29,5 +31,5 @@ CONFIGURE_ARGS+= \
 	--enable-apc=shared \
 	--disable-apc-mmap \
 
-$(eval $(call PECLPackage,apc,$(PECL_LONGNAME),+librt))
-$(eval $(call BuildPackage,$(PKG_NAME)))
+#$(eval $(call PECLPackage,apc,$(PECL_LONGNAME),+librt))
+#$(eval $(call BuildPackage,$(PKG_NAME)))
