php5-pecl-http: mark as BROKEN
indirectly

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/lang/php5-pecl-http/Makefile
+++ b/lang/php5-pecl-http/Makefile
@@ -31,5 +31,5 @@ CONFIGURE_ARGS+= \
 	--with-http-curl-requests="$(STAGING_DIR)/usr" \
 	--without-http-curl-libevent \
 
-$(eval $(call PECLPackage,http,$(PECL_LONGNAME),+libcurl +librt +php5-mod-iconv +php5-mod-session))
-$(eval $(call BuildPackage,$(PKG_NAME)))
+#$(eval $(call PECLPackage,http,$(PECL_LONGNAME),+libcurl +librt +php5-mod-iconv +php5-mod-session))
+#$(eval $(call BuildPackage,$(PKG_NAME)))
