libvncserver: fix build with gnutls
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/libs/libvncserver/Makefile
+++ b/libs/libvncserver/Makefile
@@ -41,6 +41,7 @@ CONFIGURE_ARGS += \
 	--without-fbpm \
 	--without-filetransfer \
 	--without-gcrypt \
+	--without-gnutls \
 	--without-libva \
 	--without-macosx-native \
 	--without-ssl \
