sslcat: mark as BROKEN
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/sslcat/Makefile
+++ b/net/sslcat/Makefile
@@ -24,7 +24,7 @@ define Package/sslcat
   CATEGORY:=Network
   TITLE:=A netcat like utility with SSL support
   URL:=http://www.bindshell.net/tools/sslcat
-  DEPENDS:= +libopenssl
+  DEPENDS:= +libopenssl @BROKEN
 endef
 
 define Package/sslcat/description
