--- a/net/weechat/Makefile
+++ b/net/weechat/Makefile
@@ -48,7 +48,7 @@ TARGET_LDFLAGS += \
 
 define Package/weechat/install
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/weechat-curses $(1)/usr/bin/
+	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/usr/bin/weechat $(1)/usr/bin/
 	$(INSTALL_DIR) $(1)/usr/lib/weechat/plugins
 	$(CP) \
 		$(PKG_INSTALL_DIR)/usr/lib/weechat/plugins/* \
