procmail: fix build with musl
musl does not seem to have a libnsl

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/mail/procmail/Makefile
+++ b/mail/procmail/Makefile
@@ -35,7 +35,8 @@ TARGET_CFLAGS += -DPROCMAIL
 define Build/Compile
 	$(MAKE) -C $(PKG_BUILD_DIR)/src -f ../Makefile.openwrt  \
 		$(TARGET_CONFIGURE_OPTS) \
-		CFLAGS="$(TARGET_CFLAGS)"
+		CFLAGS="$(TARGET_CFLAGS)" \
+		LDFLAGS="$(TARGET_LDFLAGS) $(if $(CONFIG_USE_MUSL),,-lnsl)"
 endef
 
 define Package/procmail/install
