net-tools: use git version + fix musl
net-tools is deprecated in some distributions
however development still continues in SF git
but there are no official releases in the past years

fix build with musl:
patch taken from alpine linux

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/net-tools/Makefile
+++ b/net/net-tools/Makefile
@@ -8,14 +8,14 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=net-tools
-PKG_VERSION:=1.60
-PKG_RELEASE:=3
+PKG_VERSION:=git
+PKG_RELEASE:=$(PKG_SOURCE_VERSION)
 
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.bz2
-PKG_SOURCE_URL:=http://www.tazenda.demon.co.uk/phil/net-tools/
-PKG_MD5SUM:=888774accab40217dde927e21979c165
-
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_SOURCE_VERSION).tar.gz
+PKG_SOURCE_PROTO:=git
+PKG_SOURCE_URL:=http://git.code.sf.net/p/net-tools/code/
+PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
+PKG_SOURCE_VERSION:=69e64639de380cfb8298bb71919d871b8ab41903
 
 include $(INCLUDE_DIR)/package.mk
 
