--- a/libs/matrixssl/Makefile
+++ b/libs/matrixssl/Makefile
@@ -8,15 +8,14 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=matrixssl
-PKG_VERSION:=1.2.4
+PKG_VERSION:=3-7-1
 PKG_RELEASE:=1
 
-PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-open.tgz
 PKG_SOURCE_URL:=http://nbd.vd-s.ath.cx/openwrt
-PKG_MD5SUM:=771c1489488e62668d673478311d63ca
+PKG_MD5SUM:=2ed37e14b181bbc58e42d08ad05858fe
 
-PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
-
+PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_VERSION)-open
 PKG_BUILD_PARALLEL:=1
 
 include $(INCLUDE_DIR)/package.mk
@@ -25,7 +24,7 @@ define Package/libmatrixssl
   SECTION:=libs
   SUBMENU:=SSL
   CATEGORY:=Libraries
-  DEPENDS:=+libpthread
+  DEPENDS:=+libpthread @!USE_MUSL @BROKEN
   TITLE:=Embedded SSL implementation
   URL:=http://www.matrixssl.org/
 endef
@@ -36,9 +35,10 @@ endef
 TARGET_CFLAGS += $(FPIC)
 
 define Build/Compile
-	+$(MAKE) $(PKG_JOBS) -C $(PKG_BUILD_DIR)/src \
+	+$(MAKE) $(PKG_JOBS) -C $(PKG_BUILD_DIR) \
 		$(TARGET_CONFIGURE_OPTS) \
-		DFLAGS="$(TARGET_CFLAGS) -Wall"
+		DFLAGS="$(TARGET_CFLAGS) -Wall" \
+		CROSS=$(TARGET_CROSS)
 endef
 
 define Build/InstallDev
