glib: mark as BROKEN since glib1 is outdated
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/libs/glib/Makefile
+++ b/libs/glib/Makefile
@@ -31,7 +31,7 @@ include $(INCLUDE_DIR)/package.mk
 define Package/glib1
   SECTION:=libs
   CATEGORY:=Libraries
-  DEPENDS:=+libpthread
+  DEPENDS:=+libpthread @BROKEN
   TITLE:=The GLib library of C routines
   URL:=http://www.gtk.org/
 endef
