--- a/utils/memtester/Makefile
+++ b/utils/memtester/Makefile
@@ -29,9 +29,10 @@ define Package/memtester/description
 endef
 
 define Build/Configure
-	$(SED) 's,cc -O2,$(TARGET_CC) $(TARGET_CFLAGS),' $(PKG_BUILD_DIR)/conf-cc
-	$(SED) "s,cc,$(TARGET_CC)," $(PKG_BUILD_DIR)/conf-ld
+	$(SED) 's|cc \-O2|$(TARGET_CC) $(TARGET_CFLAGS)|g' $(PKG_BUILD_DIR)/conf-cc
+	$(SED) 's|cc|$(TARGET_CC)|g' $(PKG_BUILD_DIR)/conf-ld
 endef
+
 
 define Build/Compile
 	$(MAKE) -C $(PKG_BUILD_DIR) all
