powertop: update to 2.7
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/utils/powertop/Makefile
+++ b/utils/powertop/Makefile
@@ -8,23 +8,25 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=powertop
-PKG_VERSION:=1.11
-PKG_RELEASE:=2
+PKG_VERSION:=2.7
+PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=http://www.lesswatts.org/projects/powertop/download/
-PKG_MD5SUM:=3498f5983c683c3a57dce7379a722082
+PKG_SOURCE_URL:=https://01.org/sites/default/files/downloads/powertop/
+PKG_MD5SUM:=e0d686e47daaf7e9d89031f7763432ef
 
 PKG_INSTALL:=1
-PKG_FIXUP:=autoreconf
+PKG_FIXUP:=gettext-version autoreconf
+INTL_FULL:=1
 
 include $(INCLUDE_DIR)/package.mk
+include $(INCLUDE_DIR)/nls.mk
 
 define Package/powertop
   SECTION:=utils
   CATEGORY:=Utilities
   TITLE:=PowerTOP
-  DEPENDS:=+libncurses
+  DEPENDS:=+libncursesw +libstdcpp +libnl $(INTL_DEPENDS)
   URL:=http://www.lesswatts.org
 endef
 
@@ -32,6 +34,12 @@ define Package/powertop/description
  PowerTOP is a Linux tool that helps you find those programs that are
  misbehaving while your computer is idle.
 endef
+
+
+CONFIGURE_ARGS += \
+	 --without-libiconv-prefix \
+	 --with-libintl-prefix=$(INTL_PREFIX)
+
 
 define Package/powertop/install
 	$(CP) $(PKG_INSTALL_DIR)/* $(1)
