procmail: fix missing library
fix build error (mips64,glibc,gcc49):
misc.o: In function `conditions':
misc.c:(.text+0x1794): undefined reference to `pow'

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/mail/procmail/Makefile
+++ b/mail/procmail/Makefile
@@ -36,7 +36,7 @@ define Build/Compile
 	$(MAKE) -C $(PKG_BUILD_DIR)/src -f ../Makefile.openwrt  \
 		$(TARGET_CONFIGURE_OPTS) \
 		CFLAGS="$(TARGET_CFLAGS)" \
-		LDFLAGS="$(TARGET_LDFLAGS) $(if $(CONFIG_USE_MUSL),,-lnsl)"
+		LDFLAGS="$(TARGET_LDFLAGS) $(if $(CONFIG_USE_MUSL),,-lnsl) -lm"
 endef
 
 define Package/procmail/install
