oidentd: fix gcc5 build
gcc5 uses -std=gnu11 instead of -std=gnu89
by default

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/oidentd/Makefile
+++ b/net/oidentd/Makefile
@@ -28,6 +28,8 @@ define Package/oidentd/description
 	A nat aware identd server that will correctly forwared requests to clients.
 endef
 
+TARGET_CFLAGS+= -std=gnu89
+
 # uses GNU configure
 
 define Build/Compile
