flow-tools: fix gcc5 build
gcc5 uses -std=gnu11 instead of -std=gnu89
by default

changed inline semantic leads to link errors:
 undefined reference to `eval_match_src_as'

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/flow-tools/Makefile
+++ b/net/flow-tools/Makefile
@@ -32,6 +32,8 @@ define Package/flow-tools/description
 	NetFlow data from Cisco and Juniper routers.
 endef
 
+TARGET_CFLAGS+=-std=gnu89
+
 define Build/Compile
 	$(call Build/Compile/Default,all)
 endef
