libgphoto2: disable bonjour
disable errors on missing dns_sd headers

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/libs/libgphoto2/Makefile
+++ b/libs/libgphoto2/Makefile
@@ -49,6 +49,7 @@ CONFIGURE_ARGS += \
 	--without-included-ltdl \
 	--without-libiconv-prefix \
 	--without-libintl-prefix \
+	--without-bonjour
 
 CONFIGURE_VARS += \
 	CPPFLAGS="$$$$CPPFLAGS $(ICONV_CFLAGS)" \
