ushare: explicitly set C standard
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/multimedia/ushare/Makefile
+++ b/multimedia/ushare/Makefile
@@ -36,6 +36,8 @@ endef
 MAKE_INSTALL_FLAGS+= \
 	INSTALL="install" \
 
+TARGET_CFLAGS+=-std=gnu89
+
 define Build/Configure
 	# this is *NOT* GNU configure
 	( cd $(PKG_BUILD_DIR); \
