--- a/net/bitchx/Makefile
+++ b/net/bitchx/Makefile
@@ -8,15 +8,16 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=bitchx
-PKG_VERSION:=1.1
+PKG_VERSION:=1.2.1
 PKG_RELEASE:=1
 
-PKG_SOURCE:=ircii-pana-$(PKG_VERSION)-final.tar.gz
-PKG_SOURCE_URL:=http://bitchx.org/files/source/
-PKG_MD5SUM:=611d2dda222f00c10140236f4c331572
+PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
+PKG_SOURCE_URL:=@SF/bitchx
+PKG_MD5SUM:=4da13a2dcfa17847168e50e62be4f67a
 
-PKG_BUILD_DIR:=$(BUILD_DIR)/BitchX
-
+PKG_INSTALL:=1
+PKG_MACRO_PATHS:=macros
+PKG_FIXUP:=autoreconf
 PKG_BUILD_DEPENDS:=libncurses
 
 include $(INCLUDE_DIR)/package.mk
@@ -30,41 +31,10 @@ define Package/bitchx
   URL:=http://www.bitchx.org
 endef
 
-define Build/Compile
-	$(MAKE) -C $(PKG_BUILD_DIR) \
-		CFLAGS="$(TARGET_CFLAGS) $(TARGET_CPPFLAGS)" \
-		DESTDIR="$(PKG_INSTALL_DIR)" \
-		all
-	mkdir -p $(PKG_INSTALL_DIR)/tmp
-	mkdir -p $(PKG_INSTALL_DIR)/etc/init.d
-	mkdir -p $(PKG_INSTALL_DIR)/usr/bin
-	mkdir -p $(PKG_INSTALL_DIR)/usr/lib/bx
-	mkdir -p $(PKG_INSTALL_DIR)/usr/share/man/man1
-	mkdir -p $(PKG_INSTALL_DIR)/usr/lib/bx/translation
-	mkdir -p $(PKG_INSTALL_DIR)/usr/lib/bx/plugins
-	mkdir -p $(PKG_INSTALL_DIR)/usr/lib/bx/help
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/source/BitchX $(PKG_INSTALL_DIR)/usr/bin/BitchX-1.1-final
-	rm -f $(PKG_INSTALL_DIR)/usr/bin/BitchX
-	ln -s /usr/bin/BitchX-1.1-final $(PKG_INSTALL_DIR)/usr/bin/BitchX
-	$(INSTALL_DATA) $(PKG_BUILD_DIR)/BitchX.help $(PKG_INSTALL_DIR)/usr/lib/bx/BitchX.help
-	$(INSTALL_DATA) $(PKG_BUILD_DIR)/BitchX.ircnames $(PKG_INSTALL_DIR)/usr/lib/bx/BitchX.ircnames
-	$(INSTALL_DATA) $(PKG_BUILD_DIR)/BitchX.quit $(PKG_INSTALL_DIR)/usr/lib/bx/BitchX.quit
-	$(INSTALL_DATA) $(PKG_BUILD_DIR)/BitchX.reasons $(PKG_INSTALL_DIR)/usr/lib/bx/BitchX.kick
-	$(INSTALL_DATA) $(PKG_BUILD_DIR)/source/wserv $(PKG_INSTALL_DIR)/usr/lib/bx/wserv
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/source/scr-bx $(PKG_INSTALL_DIR)/usr/bin/scr-bx
-	$(CP) $(PKG_BUILD_DIR)/script $(PKG_INSTALL_DIR)/usr/lib/bx/
-	$(CP) $(PKG_BUILD_DIR)/translation $(PKG_INSTALL_DIR)/usr/lib/bx/
-	bzip2 $(PKG_INSTALL_DIR)/usr/lib/bx/translation/*
-	$(CP) ./files/bitchxrc $(PKG_INSTALL_DIR)/tmp/.bitchxrc
-	$(CP) ./files/bitchxrc.init $(PKG_INSTALL_DIR)/etc/init.d/bitchxrc
-endef
-
 define Package/bitchx/install
-	$(INSTALL_DIR) $(1)/usr/bin $(1)/usr/lib $(1)/etc/init.d $(1)/tmp
+	$(INSTALL_DIR) $(1)/usr/bin $(1)/usr/lib $(1)/etc/init.d
 	$(CP) $(PKG_INSTALL_DIR)/usr/bin/* $(1)/usr/bin
 	$(CP) $(PKG_INSTALL_DIR)/usr/lib/* $(1)/usr/lib
-	$(INSTALL_BIN) $(PKG_INSTALL_DIR)/etc/init.d/bitchxrc $(1)/etc/init.d/
-	$(CP) $(PKG_INSTALL_DIR)/tmp/.bitchxrc $(1)/tmp
 endef
 
 $(eval $(call BuildPackage,bitchx))
