mini_httpd: disable matrixssl
- Header file changed
- maybe abi did change too ?

Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/mini_httpd/Makefile
+++ b/net/mini_httpd/Makefile
@@ -64,7 +64,7 @@ endef
 
 define Package/mini-httpd-matrixssl
 $(call Package/mini-httpd/Default)
-  DEPENDS:= +libmatrixssl
+  DEPENDS:= +libmatrixssl @BROKEN
   TITLE+= (built with MatrixSSL)
 endef
 
