--- a/net/tsocks/Makefile
+++ b/net/tsocks/Makefile
@@ -16,6 +16,7 @@ PKG_MD5SUM:=51caefd77e5d440d0bbd6443db4fc0f8
 PKG_SOURCE_URL:=@SF/tsocks
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)beta5.tar.gz
 
+PKG_FIXUP:=autoreconf
 PKG_INSTALL:=1
 
 include $(INCLUDE_DIR)/package.mk
