tctool: deactivate on musl
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/tctool/Makefile
+++ b/net/tctool/Makefile
@@ -24,7 +24,7 @@ define Package/tctool
   CATEGORY:=Network
   TITLE:=TrendChip-Modem-Utility
   URL:=http://speedmodem50b.berlios.de/
-  DEPENDS:=+libstdcpp
+  DEPENDS:=+libstdcpp @!USE_MUSL
 endef
 
 define Package/tctool/description
