shat: deactivate on musl
Signed-off-by: Dirk Neukirchen <plntyk.lede@plntyk.name>

--- a/net/shat/Makefile
+++ b/net/shat/Makefile
@@ -22,6 +22,7 @@ define Package/shat
   CATEGORY:=Network
   TITLE:=Source Hardware Address Translation
   URL:=http://sourceforge.net/projects/shat/
+  DEPENDS:=@!USE_MUSL
 endef
 
 define Package/shat/description
